fix: improve text visibility stack icon text by adding mix-blend-mode

--- a/src/app/features/projects/pages/project-detail/stack-icon/stack-icon.css
+++ b/src/app/features/projects/pages/project-detail/stack-icon/stack-icon.css
@@ -10,3 +10,8 @@
   width: 24px;
   height: 24px;
 }
+
+.icon-container span {
+  color: var(--base-light-color);
+  mix-blend-mode: difference;
+}
